--- a/GNS_topo_16/project-files/dynamips/ceb29b58-3e84-4da3-94d8-5486eb3b1a2a/configs/i12_startup-config.cfg
+++ b/GNS_topo_16/project-files/dynamips/ceb29b58-3e84-4da3-94d8-5486eb3b1a2a/configs/i12_startup-config.cfg
@@ -29,17 +29,15 @@ interface Loopback0
 !
 interface FastEthernet0/0
  no ip address
+ shutdown
  duplex full
- ipv6 address 2001:192:112:7::2/64
- ipv6 enable
- ipv6 ospf 1 area 0
 !
 router ospf 1
 !
 interface GigabitEthernet1/0
  no ip address
  negotiation auto
- ipv6 address 2001:192:170:8::1/64
+ ipv6 address 2001:192:112:6::2/64
  ipv6 enable
  ipv6 ospf 1 area 0
 !
@@ -63,7 +61,6 @@ router bgp 112
  bgp router-id 12.12.12.12
  bgp log-neighbor-changes
  no bgp default ipv4-unicast
- neighbor 2001:192:170:8::2 remote-as 122
  neighbor 2001:DB8:10::1 remote-as 112
  neighbor 2001:DB8:10::1 update-source Loopback0
  neighbor 2001:DB8:11::1 remote-as 112
@@ -73,10 +70,6 @@ router bgp 112
  exit-address-family
  !
  address-family ipv6
-  network 2001:192:112:6::/64
-  network 2001:192:112:7::/64
-  network 2001:192:170:8::/64
-  neighbor 2001:192:170:8::2 activate
   neighbor 2001:DB8:10::1 activate
   neighbor 2001:DB8:11::1 activate
  exit-address-family
@@ -88,7 +81,6 @@ no ip http secure-server
 !
 ipv6 router ospf 1
  router-id 12.12.12.12
- passive-interface GigabitEthernet1/0
 !!!!
 control-plane
 !!
