--- a/GNS_topo_16/project-files/dynamips/2f4046af-a5e6-4263-9fd9-dc84ef7913c4/configs/i5_startup-config.cfg
+++ b/GNS_topo_16/project-files/dynamips/2f4046af-a5e6-4263-9fd9-dc84ef7913c4/configs/i5_startup-config.cfg
@@ -30,13 +30,13 @@ interface Loopback0
 interface FastEthernet0/0
  no ip address
  duplex full
- ipv6 address 2001:192:170:1::1/64
+ ipv6 address 2001:192:170:5::1/64
  ipv6 enable
 !
 interface GigabitEthernet1/0
  no ip address
  negotiation auto
- ipv6 address 2001:192:111:4::2/64
+ ipv6 address 2001:192:111:2::2/64
  ipv6 enable
  ipv6 rip ng enable
 !
@@ -54,7 +54,7 @@ router bgp 111
  bgp router-id 5.5.5.5
  bgp log-neighbor-changes
  no bgp default ipv4-unicast
- neighbor 2001:192:170:1::2 remote-as 113
+ neighbor 2001:192:170:5::2 remote-as 113
  neighbor 2001:DB8:3::1 remote-as 111
  neighbor 2001:DB8:3::1 update-source Loopback0
  neighbor 2001:DB8:4::1 remote-as 111
@@ -64,11 +64,17 @@ router bgp 111
  exit-address-family
  !
  address-family ipv6
-  network 2001:192:111:3::/64
-  network 2001:192:111:4::/64
-  neighbor 2001:192:170:1::2 activate
+  neighbor 2001:192:170:5::2 activate
   neighbor 2001:DB8:3::1 activate
   neighbor 2001:DB8:4::1 activate
+  network 2001:192:111:1::/64
+  network 2001:192:111:2::/64
+  network 2001:192:113:3::/64
+  network 2001:192:170:5::/64
+  network 2001:192:170:7::/64
+  network 2001:DB8:3::1/128
+  network 2001:DB8:4::1/128
+  network 2001:DB8:5::1/128
  exit-address-family
 !
 ip forward-protocol nd
