--- a/GNS_topo_16/project-files/dynamips/57250c95-d1a4-401a-b812-81b461973c0f/configs/i2_startup-config.cfg
+++ b/GNS_topo_16/project-files/dynamips/57250c95-d1a4-401a-b812-81b461973c0f/configs/i2_startup-config.cfg
@@ -62,9 +62,14 @@ router bgp 101
  exit-address-family
  !
  address-family ipv6
-  network 2001:192:101:1::/64
   neighbor 2001:192:170:2::2 activate
   neighbor 2001:DB8:1::1 activate
+  network 2001:192:101:1::/64
+  network 2001:192:113:1::/64
+  network 2001:192:170:2::/64
+  network 2001:192:170:10::/64
+  network 2001:DB8:1::1/128
+  network 2001:DB8:2::1/128
  exit-address-family
 !
 ip forward-protocol nd
