--- a/GNS_topo_16/project-files/dynamips/75e79790-3ffa-4ba5-813a-893f296f2504/configs/i6_startup-config.cfg
+++ b/GNS_topo_16/project-files/dynamips/75e79790-3ffa-4ba5-813a-893f296f2504/configs/i6_startup-config.cfg
@@ -30,15 +30,14 @@ interface Loopback0
 interface FastEthernet0/0
  no ip address
  duplex full
- ipv6 address 2001:192:170:1::2/64
+ ipv6 address 2001:192:170:5::2/64
  ipv6 enable
 !
 interface GigabitEthernet1/0
  no ip address
  negotiation auto
- ipv6 address 2001:192:113:2::1/64
+ ipv6 address 2001:192:170:7::1/64
  ipv6 enable
- ipv6 rip ng enable
 !
 interface GigabitEthernet2/0
  no ip address
@@ -56,7 +55,8 @@ router bgp 113
  bgp router-id 6.6.6.6
  bgp log-neighbor-changes
  no bgp default ipv4-unicast
- neighbor 2001:192:170:1::1 remote-as 111
+ neighbor 2001:192:170:7::2 remote-as 112
+ neighbor 2001:192:170:5::1 remote-as 111
  neighbor 2001:DB8:7::1 remote-as 113
  neighbor 2001:DB8:7::1 update-source Loopback0
  neighbor 2001:DB8:8::1 remote-as 113
@@ -68,26 +68,24 @@ router bgp 113
  exit-address-family
  !
  address-family ipv6
-  network 2001:192:101:1::/64
-  network 2001:192:102:10::/64
-  network 2001:192:111:3::/64
-  network 2001:192:111:4::/64
-  network 2001:192:112:6::/64
-  network 2001:192:112:7::/64
-  network 2001:192:113:2::/64
-  network 2001:192:113:3::/64
-  network 2001:192:113:4::/64
-  network 2001:192:113:5::/64
-  network 2001:192:122:9::/64
-  network 2001:192:170:1::/64
-  network 2001:192:170:2::/64
-  network 2001:192:170:4::/64
-  network 2001:192:170:5::/64
-  network 2001:192:170:8::/64
-  neighbor 2001:192:170:1::1 activate
+  neighbor 2001:192:170:7::2 activate
+  neighbor 2001:192:170:5::1 activate
   neighbor 2001:DB8:7::1 activate
   neighbor 2001:DB8:8::1 activate
   neighbor 2001:DB8:9::1 activate
+  network 2001:192:111:2::/64
+  network 2001:192:112:5::/64
+  network 2001:192:113:1::/64
+  network 2001:192:113:2::/64
+  network 2001:192:113:3::/64
+  network 2001:192:170:2::/64
+  network 2001:192:170:5::/64
+  network 2001:192:170:7::/64
+  network 2001:192:170:10::/64
+  network 2001:DB8:6::1/128
+  network 2001:DB8:7::1/128
+  network 2001:DB8:8::1/128
+  network 2001:DB8:9::1/128
  exit-address-family
 !
 ip forward-protocol nd
