--- a/GNS_topo_16/project-files/dynamips/85920f6a-1a0e-4304-bb8a-a49742f58b81/configs/i10_startup-config.cfg
+++ b/GNS_topo_16/project-files/dynamips/85920f6a-1a0e-4304-bb8a-a49742f58b81/configs/i10_startup-config.cfg
@@ -30,7 +30,7 @@ interface Loopback0
 interface FastEthernet0/0
  no ip address
  duplex full
- ipv6 address 2001:192:170:5::2/64
+ ipv6 address 2001:192:112:5::1/64
  ipv6 enable
  ipv6 ospf 1 area 0
 !
@@ -39,7 +39,7 @@ router ospf 1
 interface GigabitEthernet1/0
  no ip address
  negotiation auto
- ipv6 address 2001:192:112:6::1/64
+ ipv6 address 2001:192:170:7::2/64
  ipv6 enable
  ipv6 ospf 1 area 0
 !
@@ -63,7 +63,7 @@ router bgp 112
  bgp router-id 10.10.10.10
  bgp log-neighbor-changes
  no bgp default ipv4-unicast
- neighbor 2001:192:170:5::1 remote-as 113
+ neighbor 2001:192:170:7::1 remote-as 113
  neighbor 2001:DB8:11::1 remote-as 112
  neighbor 2001:DB8:11::1 update-source Loopback0
  neighbor 2001:DB8:12::1 remote-as 112
@@ -73,12 +73,17 @@ router bgp 112
  exit-address-family
  !
  address-family ipv6
-  network 2001:192:112:6::/64
-  network 2001:192:112:7::/64
-  network 2001:192:170:8::/64
-  neighbor 2001:192:170:5::1 activate
+  neighbor 2001:192:170:7::1 activate
   neighbor 2001:DB8:11::1 activate
   neighbor 2001:DB8:12::1 activate
+  network 2001:192:112:5::/64
+  network 2001:192:112:6::/64
+  network 2001:192:113:3::/64
+  network 2001:192:170:5::/64
+  network 2001:192:170:7::/64
+  network 2001:DB8:10::1/128
+  network 2001:DB8:11::1/128
+  network 2001:DB8:12::1/128
  exit-address-family
 !
 ip forward-protocol nd
@@ -88,7 +93,7 @@ no ip http secure-server
 !
 ipv6 router ospf 1
  router-id 10.10.10.10
- passive-interface FastEthernet0/0
+ passive-interface GigabitEthernet1/0
 !!!!
 control-plane
 !!
