--- a/GNS_topo_16/project-files/dynamips/75e79790-3ffa-4ba5-813a-893f296f2504/configs/i6_startup-config.cfg
+++ b/GNS_topo_16/project-files/dynamips/75e79790-3ffa-4ba5-813a-893f296f2504/configs/i6_startup-config.cfg
@@ -1,4 +1,5 @@
-!!!
+!
+!!!
 !
 version 15.2
 service timestamps debug datetime msec
@@ -8,19 +9,19 @@ hostname R6
 !
 boot-start-marker
 boot-end-marker
-!!!
+!!!
 no aaa new-model
 no ip icmp rate-limit unreachable
 ip cef
-!!!!!!
+!!!!!!
 no ip domain lookup
 ipv6 unicast-routing
 ipv6 cef
-!!
+!!
 multilink bundle-name authenticated
-!!!!!!!!!
+!!!!!!!!!
 ip tcp synwait-time 5
-!!!!!!!!!!!!
+!!!!!!!!!!!!
 interface Loopback0
  no ip address
  ipv6 address 2001:DB8:6::1/128
@@ -88,16 +89,70 @@ router bgp 113
   network 2001:DB8:9::1/128
  exit-address-family
 !
+ address-family ipv6
+  neighbor 2001:192:170:7::2 route-map from_p in
+  neighbor 2001:192:170:7::2 route-map to_p out
+  neighbor 2001:192:170:7::2 route-map my_subnets out
+ exit-address-family
+!
+!
+route-map from_p permit 10
+ set community 7340154 additive
+ set local-preference 150
+!
+!
+ip community-list standard block_p deny 7340154
+ip community-list standard block_p permit 6553700
+!
+route-map to_p permit 10
+ match community block_p
+!
+ address-family ipv6
+  neighbor 2001:192:170:5::1 route-map from_p in
+  neighbor 2001:192:170:5::1 route-map to_p out
+  neighbor 2001:192:170:5::1 route-map my_subnets out
+ exit-address-family
+!
+!
+route-map from_p permit 10
+ set community 7340154 additive
+ set local-preference 100
+!
+!
+ip community-list standard block_p deny 7340154
+ip community-list standard block_p permit 6553700
+!
+route-map to_p permit 10
+ match community block_p
+!
+!
+ipv6 prefix-list my_subnets permit 2001:192:113:1::1/64
+ipv6 prefix-list my_subnets permit 2001:192:113:2::1/64
+ipv6 prefix-list my_subnets permit 2001:192:113:3::2/64
+ipv6 prefix-list my_subnets permit 
+ipv6 prefix-list my_subnets permit 2001:192:113:1::1/64
+ipv6 prefix-list my_subnets permit 2001:192:113:2::1/64
+ipv6 prefix-list my_subnets permit 2001:192:113:3::2/64
+ipv6 prefix-list my_subnets permit 
+ipv6 prefix-list my_subnets permit 2001:192:113:1::1/64
+ipv6 prefix-list my_subnets permit 2001:192:113:2::1/64
+ipv6 prefix-list my_subnets permit 2001:192:113:3::2/64
+ipv6 prefix-list my_subnets permit 
+!
+!
+route-map my_subnets permit 50
+ set community 6553700 additive
+!
 ip forward-protocol nd
-!!
+!!
 no ip http server
 no ip http secure-server
 !
 ipv6 router rip ng
  redistribute connected
-!!!!
+!!!!
 control-plane
-!!
+!!
 line con 0
  exec-timeout 0 0
  privilege level 15
@@ -110,5 +165,5 @@ line aux 0
  stopbits 1
 line vty 0 4
  login
-!!
-end
+!!
+end
